<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoTitleImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_title"
        app:layout_constraintBottom_toTopOf="@id/signInLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signInLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoTitleImageView">

        <!-- EditText - Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:theme="@style/CustomTextInputLayout"
            app:layout_constraintBottom_toTopOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- EditText - Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:theme="@style/CustomTextInputLayout"
            app:layout_constraintBottom_toTopOf="@id/signInEmailButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInEmailButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:onClick="signInAndSignUp"
            android:text="@string/signin_email"
            android:textAllCaps="false"
            android:textColor="@color/colorGray"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toTopOf="@id/anonymousButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/anonymousButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:onClick="anonymousLogin"
            android:text="@string/anonymous"
            android:textAllCaps="false"
            android:textColor="@color/colorGray"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toTopOf="@id/signInGoogleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInEmailButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInGoogleButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/btn_signin_google"
            android:onClick="googleLogin"
            android:text="@string/signin_google"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toTopOf="@id/signInFacebookButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/anonymousButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInFacebookButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/btn_signin_facebook"
            android:onClick="facebookLogin"
            android:text="@string/signin_facebook"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInGoogleButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>