<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/stateLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stateLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/followSignOutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileImageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/postTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/postCountTextView"
                app:layout_constraintEnd_toStartOf="@id/followerTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/postCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_0"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/postTextView"
                app:layout_constraintStart_toStartOf="@id/postTextView"
                app:layout_constraintTop_toBottomOf="@id/postTextView" />

            <TextView
                android:id="@+id/followerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/followerCountTextView"
                app:layout_constraintEnd_toStartOf="@id/followingTextView"
                app:layout_constraintStart_toEndOf="@id/postTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/followerCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_0"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/followerTextView"
                app:layout_constraintStart_toStartOf="@id/followerTextView"
                app:layout_constraintTop_toBottomOf="@id/followerTextView" />

            <TextView
                android:id="@+id/followingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/followingCountTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/followerTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/followingCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_0"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/followingTextView"
                app:layout_constraintStart_toStartOf="@id/followingTextView"
                app:layout_constraintTop_toBottomOf="@id/followingTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/followSignOutButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/follow"
            android:textColor="@color/colorGray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/stateLayout"
            app:layout_constraintTop_toBottomOf="@id/stateLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>