<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.AddPhotoActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toTopOf="@id/toolBarDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_title" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolBarDivision"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorDivision"
        app:layout_constraintBottom_toTopOf="@id/addPhotoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <!-- Contents -->
    <ImageView
        android:id="@+id/addPhotoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/addPhotoUploadButton"
        app:layout_constraintEnd_toStartOf="@id/editTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarDivision" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextInputLayout"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/CustomTextInputLayout"
        app:layout_constraintBottom_toTopOf="@id/addPhotoUploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addPhotoImageView"
        app:layout_constraintTop_toBottomOf="@id/toolBarDivision">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addPhotoEditExplain"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/hint_image_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addPhotoUploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="contentUpload"
        android:text="@string/upload_image"
        android:theme="@style/ButtonStyle"
        app:layout_constraintEnd_toEndOf="@id/editTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/editTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/editTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>